# python-opentelemetry-exception-ext

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: check.yml
example/enable_local_variables_recording/: README.md  sample.py
src/opentelemetry/exception/ext/: __init__.py
src/opentelemetry/exception/ext/_internal/: exception_recorder.py
tests/: test_exception_recorder.py
