[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exception-ext"
version = "0.0.3"
authors = [
  { name="Vaxila Labs", email="hello@vaxila-labs.com" },
]
dependencies = [
  "opentelemetry-sdk ~= 1.12",
]
description = "OpenTelemetry extension for exception"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vaxila-labs/python-opentelemetry-exception-ext"
"Bug Tracker" = "https://github.com/vaxila-labs/python-opentelemetry-exception-ext/issues"

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.black]
# same length with pylint
line-length = 100
